`@CollectionType` + better CollectionSemantics resolution handling from annotations; HHH-9688 - Combination of @OrderBy and @SortComparator
HHH-9688 was simple change in the code I was working on already, so went ahead and just did it